src/objects/GVLAssignment__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GVLNo__c</fullName>
        <externalId>true</externalId>
        <label>GVLNo</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GVLTID__c</fullName>
        <label>GVLTID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Supervisor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GVLAssignment</label>
    <nameField>
        <label>GVLAssignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GVLAssignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>